Fixed that icons are truncated on the repository view.
git-svn-id: http://svn.redmine.org/redmine/trunk@16947 e93f8b46-1217-0410-a6f0-8f06a7374b81

--- a/public/stylesheets/scm.css
+++ b/public/stylesheets/scm.css
@@ -1,3 +1,7 @@
+table.entries a {
+  padding-top: 2px;
+  padding-bottom: 2px;
+}
 
 table.revision-info td {
     margin:  0px;
